# slampt-3

./: .env.secret  .gitignore  AABB-params.json  Dockerfile  Pipfile  README.md  docker-compose.yml  nouns.txt  requirements.txt  setup.cfg
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
test/: test_poems.py
