[metadata]
name = slampt-3
version = 0.0.1
author = Garrett Maring
author_email = g@engi.network
description = GPT-3 Rhythmic Poetry Prompt Engi Job
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/garrettmaring/slampt-3
project_urls =
    Bug Tracker = https://github.com/garrettmaring/slmapt-3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
